--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,4 +2,4 @@
 
 inventory       = inventory.ini
 #ask_vault_pass = True
-vault_password_file = "path of that file located"
+#vault_password_file = "path of that file located"
