--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,3 @@
-BACKEND_HOST: backend.sreeaws.space
+BACKEND_HOST: "backend.app-{{ ENVIRONMENT }}.sreeaws.space"
 APP_LOCATION: /usr/share/nginx/html
 COMPONENT: frontend
